# 2024/01/06
- Try to merge some emu vs live config for shm and bst
- Check dot / nuke min mana on casts
- HP med start/stop settings
- Misc cleanup
- Move some debug tab clutter to other tabs
- Make state inspector into a table

# 2023/12/24
- Add very basic actor based buffing logic

# 2023/12/23
- Some consolidation of casting code

# 2023/11/28
- Update logging for finding abilities
- Refactor actor experiment a bit
- Add theme setting on debug tab for fun

# 2023/11/27
- add some stuff around clickies
- added some usage of new actor features
- some small bug fixes

# 2023/11/17
- some refactoring of class objects
- added mostly commented out live abilities for classes...

# 2023/11/04
- Attempt some hacky single target mez logic fixes

# 2023/11/02
- Add laurions song spells for brd, enc, nec, rng, shd, war

# 2023/11/01
- Cleanup logger code some
- Tidy up ui toggles a tiny bit

# 2023/10/31
- Add console tab
- Add some lower level cleric spells
- Fix checks around having some abilities on monk

# 2023/07/23
- Rename checkDistance and cleanup some ImGui.Text formatting

# 2023/05/20
- Add code for TLOs/datatype
- Refactor some spell code out of common into ability
- Move some subtables out of aqo into requires
- Break up tank and assist code into a few functions incase i ever try to move more towards a state machine again
- Various class updates

# 2023/04/30
- Fix SummonID setting
- Adjust rezzing to hopefully be more proactive
- Fix npc checks on bard clickies
- Adjust enc nukes

# 2023/02/08
- manastone options only visible in ui for mana users

# 2023/02/07
- Move XTARGETHEAL to common configuration for healer classes
- All classes can now rez in combat with rez tokens
- Improve pull debug
- Reorganized init code in each of the class luas
- Fix option check for HoT heals
- Move some 10ish min CDs for bard into burns
- Add manastone configs

# 2023/02/03
- Maybe actually stopped bard crashes
- Fix error in buff requests with unrecognized spells
