@@ -145,8 +145,7 @@ local function buffSingle(base)
 end
 
 local function buffActors(base)
-    if not base.availableBuffs then return end
-    local availableBuffs = base:availableBuffs()
+    local availableBuffs = base:getRequestAliases()
     for name, charState in pairs(state.actors) do
         local wantBuffs = charState.wantBuffs
         if wantBuffs then
@@ -157,7 +156,7 @@ local function buffActors(base)
                     spawn.DoTarget()
                     mq.delay(1000, function() return mq.TLO.Target.BuffsPopulated() end)
                     if mq.TLO.Target.ID() == spawn.ID() and not mq.TLO.Target.Buff(availableBuffs[buff])() then
-                        if abilities.use(base.spells[buff], true) then return true end
+                        if abilities.use(base:getAbilityForAlias(buff), true) then return true end
                     end
                 end
             end
